--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!--metadata section-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,6 +9,7 @@
 </head>
 
 <body>
+    <!--Main Header-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,32 +26,37 @@
             </ul>
         </nav>
     </header>
+    <!--Hero Image-->
     <section>
         <img src="./assets/images/digital-marketing-meeting.jpg" class="hero" alt="a group of people meeting around a table" />    
     </section>
-    <section class="content">
-        <section id="search-engine-optimization" class="content-section">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="potential benefits to SEOs displayed on a notebook page"/>
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+    <!--Main content-->
+    <main>
+        <section class="content">
+            <section id="search-engine-optimization" class="content-section">
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="potential benefits to SEOs displayed on a notebook page"/>
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </section>
+            <section id="online-reputation-management" class="content-section">
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="a laptop screen displaying a increase in reputation via a bar chart and two pie charts."/>
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
+            </section>
+            <section id="social-media-marketing" class="content-section">
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A group of people pointing to visual representations of social media at a table."/>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </section>
         </section>
-        <section id="online-reputation-management" class="content-section">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="a laptop screen displaying a increase in reputation via a bar chart and two pie charts."/>
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </section>
-        <section id="social-media-marketing" class="content-section">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A group of people pointing to visual representations of social media at a table."/>
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </section>
-    </section>
+    <main>
+    <!--Aside Content-->
     <aside>
         <section class="benefits">
             <section>
@@ -75,6 +82,7 @@
             </section>
         </section>
     </aside>
+    <!--Footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
